--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -27,7 +27,7 @@
      <string>0.1</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="edSigStep">
+   <widget class="QLineEdit" name="edSigTilt">
     <property name="geometry">
      <rect>
       <x>40</x>
@@ -351,7 +351,7 @@
    </widget>
    <zorder>layoutWidget</zorder>
    <zorder>edAlfa</zorder>
-   <zorder>edSigStep</zorder>
+   <zorder>edSigTilt</zorder>
    <zorder>btSigmoid</zorder>
    <zorder>img1</zorder>
    <zorder>lbl1</zorder>
